--- a/devops_essentials/github_actions/.github/workflows/docker-image.yml
+++ b/devops_essentials/github_actions/.github/workflows/docker-image.yml
@@ -27,4 +27,4 @@ jobs:
           with:
             context: .
             push: true
-            tags: ghcr.io/${{ github.repository }}:latest
+            tags: ghcr.io/${{ holbertonschool-higher_level_programming }}:latest
